Test datasets -C10 5 / FFC .65-.75 -FFC .75 / C10 1-5

--- a/IV Optimize/1.0.65 XGB - SavingsDeterminant.ipynb
+++ b/IV Optimize/1.0.65 XGB - SavingsDeterminant.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "trusted": true
       },
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -139,7 +139,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -353,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -592,13 +592,22 @@
               "4      0.650325    1.137636   49.436687  "
             ]
           },
-          "execution_count": 16,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "df_All.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_All.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\IV Optimize\\Statistical Testing Sets\\rC4_65.csv', index=False)"
       ]
     }
   ],
