--- a/IV Optimize/1.0.69 XGB - SavingsDeterminant.ipynb
+++ b/IV Optimize/1.0.69 XGB - SavingsDeterminant.ipynb
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -330,7 +330,7 @@
         "        ffc_adjusted = df_All.at[index, 'FFC55555_adj']\n",
         "\n",
         "        if decanol < 5:\n",
-        "            if ffc_adjusted >= 0.66: # Can be adjusted to the lowest rC4 desired\n",
+        "            if ffc_adjusted >= 0.70: # Can be adjusted to the lowest rC4 desired\n",
         "                df_All.at[index, 'FFC55555_adj'] -= 0.01\n",
         "            else:\n",
         "                break  # Next Record\n",
@@ -353,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -431,7 +431,7 @@
               "      <td>-0.607993</td>\n",
               "      <td>177.188</td>\n",
               "      <td>212.861000</td>\n",
-              "      <td>0.651501</td>\n",
+              "      <td>0.691501</td>\n",
               "      <td>1.202501</td>\n",
               "      <td>55.402496</td>\n",
               "    </tr>\n",
@@ -460,7 +460,7 @@
               "      <td>-0.607993</td>\n",
               "      <td>177.188</td>\n",
               "      <td>212.861000</td>\n",
-              "      <td>0.651501</td>\n",
+              "      <td>0.691501</td>\n",
               "      <td>1.201722</td>\n",
               "      <td>54.622807</td>\n",
               "    </tr>\n",
@@ -489,7 +489,7 @@
               "      <td>-0.607993</td>\n",
               "      <td>177.188</td>\n",
               "      <td>212.861000</td>\n",
-              "      <td>0.651501</td>\n",
+              "      <td>0.691501</td>\n",
               "      <td>1.196464</td>\n",
               "      <td>54.384926</td>\n",
               "    </tr>\n",
@@ -518,7 +518,7 @@
               "      <td>-0.626386</td>\n",
               "      <td>177.417</td>\n",
               "      <td>212.822333</td>\n",
-              "      <td>0.650505</td>\n",
+              "      <td>0.690505</td>\n",
               "      <td>1.137032</td>\n",
               "      <td>49.17197</td>\n",
               "    </tr>\n",
@@ -547,7 +547,7 @@
               "      <td>-0.632433</td>\n",
               "      <td>177.459</td>\n",
               "      <td>212.799750</td>\n",
-              "      <td>0.650325</td>\n",
+              "      <td>0.690325</td>\n",
               "      <td>1.137636</td>\n",
               "      <td>49.436687</td>\n",
               "    </tr>\n",
@@ -585,20 +585,29 @@
               "4  65.966425  55.181525  50.740225  1.206718 -0.632433  177.459  212.799750   \n",
               "\n",
               "   FFC55555_adj Decanol_adj Butanol_adj  \n",
-              "0      0.651501    1.202501   55.402496  \n",
-              "1      0.651501    1.201722   54.622807  \n",
-              "2      0.651501    1.196464   54.384926  \n",
-              "3      0.650505    1.137032    49.17197  \n",
-              "4      0.650325    1.137636   49.436687  "
+              "0      0.691501    1.202501   55.402496  \n",
+              "1      0.691501    1.201722   54.622807  \n",
+              "2      0.691501    1.196464   54.384926  \n",
+              "3      0.690505    1.137032    49.17197  \n",
+              "4      0.690325    1.137636   49.436687  "
             ]
           },
-          "execution_count": 16,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "df_All.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_All.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\IV Optimize\\Statistical Testing Sets\\rC4_69.csv', index=False)"
       ]
     }
   ],
