--- a/IV Optimize/1.0.73 XGB - SavingsDeterminant.ipynb
+++ b/IV Optimize/1.0.73 XGB - SavingsDeterminant.ipynb
@@ -330,7 +330,7 @@
         "        ffc_adjusted = df_All.at[index, 'FFC55555_adj']\n",
         "\n",
         "        if decanol < 5:\n",
-        "            if ffc_adjusted >= 0.66: # Can be adjusted to the lowest rC4 desired\n",
+        "            if ffc_adjusted >= 0.74: # Can be adjusted to the lowest rC4 desired\n",
         "                df_All.at[index, 'FFC55555_adj'] -= 0.01\n",
         "            else:\n",
         "                break  # Next Record\n",
@@ -599,6 +599,15 @@
       ],
       "source": [
         "df_All.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_All.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\IV Optimize\\Statistical Testing Sets\\rC4_73.csv', index=False)"
       ]
     }
   ],
