--- a/IV Optimize/Statistical Testing Sets/C4 Difference.ipynb
+++ b/IV Optimize/Statistical Testing Sets/C4 Difference.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "metadata": {}
       },
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "metadata": {},
         "tags": [],
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "metadata": {}
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "metadata": {}
       },
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "metadata": {}
       },
@@ -244,12 +244,21 @@
         "df_rC4_1_75['FFC55555_diff'] = df_rC4_1_75['FFC55555'] - df_rC4_1_75['FFC55555_adj']\n",
         "df_rC4_1_75['Butanol_diff'] = df_rC4_1_75['Butanol'] - df_rC4_1_75['Butanol_adj']\n",
         "df_rC4_1_75['Decanol_diff'] = df_rC4_1_75['Decanol'] - df_rC4_1_75['Decanol_adj']\n",
-        "df_rC4_1_75['rC4_diff'] = (df_rC4_1_75['FFC55555']*df_rC4_1_75[''])-(df_rC4_1_75['FFC55555_adj']*df_rC4_1_75['']))"
+        "\n",
+        "# *****************************************************************\n",
+        "# df_rC4_1_75['rC4_diff'] = (df_rC4_1_75['FFC55555']*df_rC4_1_75[''])-(df_rC4_1_75['FFC55555_adj']*df_rC4_1_75['']))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## ^^^^^^ That's the number to solve for ^^^^^^^"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "metadata": {}
       },
@@ -262,19 +271,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 25,
       "metadata": {
         "metadata": {}
       },
       "outputs": [],
       "source": [
         "# Sum up the hourly data to get daily totals for each component\n",
-        "daily_totals_1_75 = df_rC4_1_75[['Butanol_diff', 'Decanol_diff']].resample('D').sum()"
+        "daily_totals_1_75 = df_rC4_1_75[['FFC55555_diff','Butanol_diff', 'Decanol_diff']].resample('D').sum()\n",
+        "\n",
+        "# Group by year and sum up daily data for each year\n",
+        "daily_totals_by_year_1_75 = df_rC4_1_75[['FFC55555_diff','Butanol_diff', 'Decanol_diff']].groupby(df_rC4_1_75.index.year).resample('D').sum()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 28,
       "metadata": {
         "metadata": {}
       },
@@ -283,25 +295,79 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Estimated Annual Production for Butanol_diff: -5747.595241433343\n",
-            "Estimated Annual Production for Decanol_diff: -1410.6846121160122\n"
+            "Year 2012:\n",
+            "  Estimated Annual Production for FFC55555_diff: 11.310000000000011\n",
+            "  Estimated Annual Production for Butanol_diff: -972.1568279333324\n",
+            "  Estimated Annual Production for Decanol_diff: -193.90538045999924\n",
+            "Year 2013:\n",
+            "  Estimated Annual Production for FFC55555_diff: 13.170000000000009\n",
+            "  Estimated Annual Production for Butanol_diff: -570.8263937000012\n",
+            "  Estimated Annual Production for Decanol_diff: -68.90767924999939\n",
+            "Year 2014:\n",
+            "  Estimated Annual Production for FFC55555_diff: 5.250000000000004\n",
+            "  Estimated Annual Production for Butanol_diff: -468.30548340000047\n",
+            "  Estimated Annual Production for Decanol_diff: -117.12876973099984\n",
+            "Year 2015:\n",
+            "  Estimated Annual Production for FFC55555_diff: 10.650000000000006\n",
+            "  Estimated Annual Production for Butanol_diff: -72.39918870002506\n",
+            "  Estimated Annual Production for Decanol_diff: -160.44445202500137\n",
+            "Year 2016:\n",
+            "  Estimated Annual Production for FFC55555_diff: 4.080000000000004\n",
+            "  Estimated Annual Production for Butanol_diff: -238.10571050000738\n",
+            "  Estimated Annual Production for Decanol_diff: -144.3860514400032\n",
+            "Year 2017:\n",
+            "  Estimated Annual Production for FFC55555_diff: 2.7100000000000026\n",
+            "  Estimated Annual Production for Butanol_diff: -354.2747859000098\n",
+            "  Estimated Annual Production for Decanol_diff: -156.57033976000255\n",
+            "Year 2018:\n",
+            "  Estimated Annual Production for FFC55555_diff: 0.17000000000000015\n",
+            "  Estimated Annual Production for Butanol_diff: -450.7095081000074\n",
+            "  Estimated Annual Production for Decanol_diff: -194.77872093000204\n",
+            "Year 2019:\n",
+            "  Estimated Annual Production for FFC55555_diff: 4.820000000000003\n",
+            "  Estimated Annual Production for Butanol_diff: -1019.4879001499794\n",
+            "  Estimated Annual Production for Decanol_diff: -204.87137067000336\n",
+            "Year 2020:\n",
+            "  Estimated Annual Production for FFC55555_diff: 1.8800000000000017\n",
+            "  Estimated Annual Production for Butanol_diff: -299.49815069997703\n",
+            "  Estimated Annual Production for Decanol_diff: -102.23371725000118\n",
+            "Year 2022:\n",
+            "  Estimated Annual Production for FFC55555_diff: 10.30000000000001\n",
+            "  Estimated Annual Production for Butanol_diff: -1301.8312923499968\n",
+            "  Estimated Annual Production for Decanol_diff: -67.45813060000017\n"
           ]
         }
       ],
       "source": [
-        "# Calculate the average daily production\n",
-        "average_daily_totals_1_75 = daily_totals_1_75.mean()\n",
+        "# Initialize a dictionary to store the annual production values for each year\n",
+        "annual_production_1_75 = {}\n",
         "\n",
-        "# Count the actual number of days with data\n",
-        "actual_days_with_data = daily_totals_1_75.dropna().shape[0]  # dropna() ensures you count only the days with data\n",
+        "# Loop through each group (each year) in the daily totals\n",
+        "for year, group in daily_totals_by_year_1_75.groupby(level=0):  # level=0 refers to the 'year' group\n",
+        "    # Calculate the average daily totals for the year\n",
+        "    average_daily_totals_1_75 = group.mean()\n",
+        "    \n",
+        "    # Count the actual days with data in that year\n",
+        "    actual_days_with_data_1_75 = group.dropna().shape[0]\n",
+        "    \n",
+        "    # Calculate the estimated annual production based on actual days with data\n",
+        "    estimated_annual_production_FFC55555_1_75 = average_daily_totals_1_75['FFC55555_diff'] * actual_days_with_data_1_75\n",
+        "    estimated_annual_production_butanol_1_75 = average_daily_totals_1_75['Butanol_diff'] * actual_days_with_data_1_75\n",
+        "    estimated_annual_production_decanol_1_75 = average_daily_totals_1_75['Decanol_diff'] * actual_days_with_data_1_75\n",
+        "    \n",
+        "    # Store results in dictionary\n",
+        "    annual_production_1_75[year] = {\n",
+        "        'FFC55555_diff': estimated_annual_production_FFC55555_1_75,\n",
+        "        'Butanol_diff': estimated_annual_production_butanol_1_75,\n",
+        "        'Decanol_diff': estimated_annual_production_decanol_1_75\n",
+        "    }\n",
         "\n",
-        "# Estimate annual production based on actual data days\n",
-        "estimated_annual_production_butanol_1_75 = average_daily_totals_1_75['Butanol_diff'] * actual_days_with_data\n",
-        "estimated_annual_production_decanol_1_75 = average_daily_totals_1_75['Decanol_diff'] * actual_days_with_data\n",
-        "\n",
-        "\n",
-        "print(f\"Estimated Annual Production for Butanol_diff: {estimated_annual_production_butanol_1_75}\")\n",
-        "print(f\"Estimated Annual Production for Decanol_diff: {estimated_annual_production_decanol_1_75}\")"
+        "# Output the results\n",
+        "for year in annual_production_1_75:\n",
+        "    print(f\"Year {year}:\")\n",
+        "    print(f\"  Estimated Annual Production for FFC55555_diff: {annual_production_1_75[year]['FFC55555_diff']}\")\n",
+        "    print(f\"  Estimated Annual Production for Butanol_diff: {annual_production_1_75[year]['Butanol_diff']}\")\n",
+        "    print(f\"  Estimated Annual Production for Decanol_diff: {annual_production_1_75[year]['Decanol_diff']}\")\n"
       ]
     },
     {
@@ -313,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {
         "metadata": {}
       },
@@ -327,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "metadata": {}
       },
@@ -339,19 +405,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 15,
       "metadata": {
         "metadata": {}
       },
       "outputs": [],
       "source": [
         "# Sum up the hourly data to get daily totals for each component\n",
-        "daily_totals = df_rC4_5_75[['Butanol_diff', 'Decanol_diff']].resample('D').sum()"
+        "daily_totals = df_rC4_5_75[['Butanol_diff', 'Decanol_diff']].resample('D').sum()\n",
+        "\n",
+        "# Group by year and sum up daily data for each year\n",
+        "daily_totals_by_year = df_rC4_5_75[['Butanol_diff', 'Decanol_diff']].groupby(df_rC4_5_75.index.year).resample('D').sum()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "metadata": {
         "metadata": {}
       },
@@ -360,25 +429,66 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Estimated Annual Production for Butanol_diff: -56850.36319843343\n",
-            "Estimated Annual Production for Decanol_diff: -1910.1647709560118\n"
+            "Year 2012:\n",
+            "  Estimated Annual Production for Butanol_diff: -3498.0317270333326\n",
+            "  Estimated Annual Production for Decanol_diff: -152.43169980999917\n",
+            "Year 2013:\n",
+            "  Estimated Annual Production for Butanol_diff: -3723.1329483000004\n",
+            "  Estimated Annual Production for Decanol_diff: 43.63221600000063\n",
+            "Year 2014:\n",
+            "  Estimated Annual Production for Butanol_diff: -8778.798418299997\n",
+            "  Estimated Annual Production for Decanol_diff: 58.367250789000195\n",
+            "Year 2015:\n",
+            "  Estimated Annual Production for Butanol_diff: -8454.699985400028\n",
+            "  Estimated Annual Production for Decanol_diff: -273.7606339950016\n",
+            "Year 2016:\n",
+            "  Estimated Annual Production for Butanol_diff: -10143.55029800001\n",
+            "  Estimated Annual Production for Decanol_diff: -253.47513181000306\n",
+            "Year 2017:\n",
+            "  Estimated Annual Production for Butanol_diff: -8551.43747360001\n",
+            "  Estimated Annual Production for Decanol_diff: -558.5149017300023\n",
+            "Year 2018:\n",
+            "  Estimated Annual Production for Butanol_diff: -1841.4962096000063\n",
+            "  Estimated Annual Production for Decanol_diff: -264.896271830002\n",
+            "Year 2019:\n",
+            "  Estimated Annual Production for Butanol_diff: -3792.786291949982\n",
+            "  Estimated Annual Production for Decanol_diff: -259.96728177000335\n",
+            "Year 2020:\n",
+            "  Estimated Annual Production for Butanol_diff: -6573.667089399978\n",
+            "  Estimated Annual Production for Decanol_diff: -177.28357680000107\n",
+            "Year 2022:\n",
+            "  Estimated Annual Production for Butanol_diff: -1492.7627568499963\n",
+            "  Estimated Annual Production for Decanol_diff: -71.8347400000002\n"
           ]
         }
       ],
       "source": [
-        "# Calculate the average daily production\n",
-        "average_daily_totals = daily_totals.mean()\n",
+        "# Initialize a dictionary to store the annual production values for each year\n",
+        "annual_production = {}\n",
         "\n",
-        "# Count the actual number of days with data\n",
-        "actual_days_with_data = daily_totals.dropna().shape[0]  # dropna() ensures you count only the days with data\n",
+        "# Loop through each group (each year) in the daily totals\n",
+        "for year, group in daily_totals_by_year.groupby(level=0):  # level=0 refers to the 'year' group\n",
+        "    # Calculate the average daily totals for the year\n",
+        "    average_daily_totals = group.mean()\n",
+        "    \n",
+        "    # Count the actual days with data in that year\n",
+        "    actual_days_with_data = group.dropna().shape[0]\n",
+        "    \n",
+        "    # Calculate the estimated annual production based on actual days with data\n",
+        "    estimated_annual_production_butanol = average_daily_totals['Butanol_diff'] * actual_days_with_data\n",
+        "    estimated_annual_production_decanol = average_daily_totals['Decanol_diff'] * actual_days_with_data\n",
+        "    \n",
+        "    # Store results in dictionary\n",
+        "    annual_production[year] = {\n",
+        "        'Butanol_diff': estimated_annual_production_butanol,\n",
+        "        'Decanol_diff': estimated_annual_production_decanol\n",
+        "    }\n",
         "\n",
-        "# Estimate annual production based on actual data days\n",
-        "estimated_annual_production_butanol = average_daily_totals['Butanol_diff'] * actual_days_with_data\n",
-        "estimated_annual_production_decanol = average_daily_totals['Decanol_diff'] * actual_days_with_data\n",
-        "\n",
-        "\n",
-        "print(f\"Estimated Annual Production for Butanol_diff: {estimated_annual_production_butanol}\")\n",
-        "print(f\"Estimated Annual Production for Decanol_diff: {estimated_annual_production_decanol}\")"
+        "# Output the results\n",
+        "for year in annual_production:\n",
+        "    print(f\"Year {year}:\")\n",
+        "    print(f\"  Estimated Annual Production for Butanol_diff: {annual_production[year]['Butanol_diff']}\")\n",
+        "    print(f\"  Estimated Annual Production for Decanol_diff: {annual_production[year]['Decanol_diff']}\")\n"
       ]
     }
   ],
